KDTree almost done. Might need to provide a query example figure, but I dont think so

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -44,3 +44,14 @@
 \input{macros/misc_mac.tex}
 \input{macros/aliases.tex}
 \input{macros/table_macros.tex} 
+
+
+\usepackage{xcolor}
+% Sepia
+\definecolor{myBGcolor}{HTML}{F6F0D6}
+\definecolor{myTextcolor}{HTML}{4F452C}
+% Dark
+%\definecolor{myBGcolor}{HTML}{3E3535}
+%\definecolor{myTextcolor}{HTML}{CFECEC}
+\pagecolor{myBGcolor}
+%\color{myTextcolor}
