--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-17 13:32:23 -0500 
+%% Created for Evan Bollig at 2013-08-18 20:26:49 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Friedman1977,
+	Acmid = {355745},
+	Address = {New York, NY, USA},
+	Author = {Friedman, Jerome H. and Bentley, Jon Louis and Finkel, Raphael Ari},
+	Date-Added = {2013-08-19 01:26:41 +0000},
+	Date-Modified = {2013-08-19 01:26:46 +0000},
+	Doi = {10.1145/355744.355745},
+	Issn = {0098-3500},
+	Issue_Date = {Sept. 1977},
+	Journal = {ACM Trans. Math. Softw.},
+	Month = sep,
+	Number = {3},
+	Numpages = {18},
+	Pages = {209--226},
+	Publisher = {ACM},
+	Title = {An Algorithm for Finding Best Matches in Logarithmic Expected Time},
+	Url = {http://doi.acm.org/10.1145/355744.355745},
+	Volume = {3},
+	Year = {1977},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/355744.355745},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/355744.355745}}
 
 @book{Skiena2008,
 	Author = {Steven Skiena},
