--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -3,21 +3,10 @@
 \usepackage{standalone}
 \input{all_usepackages}
 
-\usepackage{xcolor}
-% Sepia
-\definecolor{myBGcolor}{HTML}{F6F0D6}
-\definecolor{myTextcolor}{HTML}{4F452C}
-% Dark
-%\definecolor{myBGcolor}{HTML}{3E3535}
-%\definecolor{myTextcolor}{HTML}{CFECEC}
-\pagecolor{myBGcolor}
-%\color{myTextcolor}
-
-
 
 \title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
 \author{Evan F. Bollig}
-\college{College of Arty Science}
+\college{College of Arts and Science}
 \department{Department of Scientific Computing} % Delete if no department
 \manuscripttype{Dissertation}                    % [Thesis, Dissertation, Treatise]
 \degree{Doctor of Philosophy}                 
@@ -41,42 +30,42 @@
 \maketitle
 \makecommitteepage
 %%
-\include{dedication}
-\include{acknowledgments}
+%\include{dedication}
+%\include{acknowledgments}
 %%
 \tableofcontents
 \listoftables
 \listoffigures
-\listofalgorithms
+%\listofalgorithms
 %%
-\include{symbols}
+%\include{symbols}
 %\input{notation_and_symbols}
-\include{abbreviations}
+%\include{abbreviations}
 %%
 \input{abstract.tex}
 
 \mainmatter
 
-\include{introduction}
-\include{related_work}
-\include{rbffd_method}
+%\include{introduction}
+%\include{related_work}
+%\include{rbffd_method}
 
 \include{ordering_and_preconditioning}
-\include{distributed_solver}
+%\include{distributed_solver}
 
-\include{ViennaCL.tex}
-\include{future_of_gpus.tex}
-\include{explicit_pde_solutions}
-\include{implicit_pde_solutions}
-\include{performance_analysis} 
-\include{publications}
+%\include{ViennaCL.tex}
+%\include{future_of_gpus.tex}
+%\include{explicit_pde_solutions}
+%\include{implicit_pde_solutions}
+%\include{performance_analysis} 
+%\include{publications}
 
-\include{conclusions}
+%\include{conclusions}
 
 
-\appendix
-\include{rbffd_avoid_pole_singularities}
-\include{rbffd_weights_on_sphere}
+%\appendix
+%\include{rbffd_avoid_pole_singularities}
+%\include{rbffd_weights_on_sphere}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
